samples/_failures_safe/1761332271_ed7f06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9295287e.c: In function ‘main’:
./samples/SAFE/__tmp_9295287e.c:157:26: error: missing terminating " character
  157 |     mat1.rows = read_int("Enter rows
      |                          ^~~~~~~~~~~
./samples/SAFE/__tmp_9295287e.c:157:5: error: expected expression at end of input
  157 |     mat1.rows = read_int("Enter rows
      |     ^~~~
./samples/SAFE/__tmp_9295287e.c:157:17: error: too few arguments to function ‘read_int’
  157 |     mat1.rows = read_int("Enter rows
      |                 ^~~~~~~~
./samples/SAFE/__tmp_9295287e.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_9295287e.c:157:5: error: expected declaration or statement at end of input
  157 |     mat1.rows = read_int("Enter rows
      |     ^~~~
